[tool.poetry]
name = "scansegmentapi"
version = "3.0.0"
description = "API to access data in MSGPACK or Compact format."
authors = ["Matthias Honal", "Alexander Weinmann", "Robert Koch"]

[tool.poetry.dependencies]
python = "^3.9"
msgpack = "^1.0.3"
requests = "^2.27.1"
numpy = "^1.23.0"

[tool.poetry.dev-dependencies]
pytest-cov = "^4.0.0"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
